--- a/frl/frl-dasak.tex
+++ b/frl/frl-dasak.tex
@@ -5,9 +5,9 @@
 \mode<presentation>
 {
   %\usetheme{Warsaw}
-  \usetheme{Berkeley}
+  %\usetheme{Berkeley}
   %\usetheme{Dresden}
-  %\usetheme{Frankfurt}
+  \usetheme{Frankfurt}
   %\usetheme{Madrid}
   %\usetheme{PaloAlto}
   \setbeamercovered{transparent}
@@ -46,7 +46,7 @@
 \newcommand{\MiBps}{\mebi\byte\per\second}
 
 \title[Moment 3]
-{Informationsteknologi grundkurs:\\Föreläsning moment 3, del 2}
+{Informationsteknologi grundkurs:\\Föreläsning om säkerhet}
 
 \author{Daniel Bosk}
 
