--- a/frl/frl-datakom.tex
+++ b/frl/frl-datakom.tex
@@ -42,7 +42,7 @@
 \newcommand{\MiBps}{\mebi\byte\per\second}
 
 \title[Moment 3]
-{Informationsteknologi grundkurs:\\Föreläsning moment 3, del 1}
+{Informationsteknologi grundkurs:\\Föreläsning om datakommunikation}
 
 \author{Daniel Bosk}
 
