--- a/assgn-datakom/inl-3_1.tex
+++ b/assgn-datakom/inl-3_1.tex
@@ -111,6 +111,6 @@ escapeinside={\%*}{*)},          % if you want to add a comment within your code
 \include*{exercises}
 \include*{handin}
 
-\bibliography{../itgru}
+\bibliography{../itgrund}
 
 \end{document}
