--- a/frl/frl-dasak.tex
+++ b/frl/frl-dasak.tex
@@ -269,6 +269,7 @@
 	\end{itemize}
 \end{frame}
 
+
 \section{Hashfunktioner}
 
 \begin{frame}{Hashfunktioner}
@@ -279,7 +280,7 @@
 %%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}[allowframebreaks]{Referenser}
-	\bibliography{../itgru}
+	\bibliography{../itgrund}
 \end{frame}
 
 \end{document}
