--- a/frl/frl-datakom.tex
+++ b/frl/frl-datakom.tex
@@ -285,7 +285,7 @@
 %%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}[allowframebreaks]{Referenser}
-	\bibliography{../itgru}
+	\bibliography{../itgrund}
 \end{frame}
 
 
