--- a/assgn-database1/inl-2_5.tex
+++ b/assgn-database1/inl-2_5.tex
@@ -103,6 +103,6 @@ escapeinside={\%*}{*)},          % if you want to add a comment within your code
 \include*{exercises}
 \include*{handin}
 
-\bibliography{../itgru}
+\bibliography{../itgrund}
 
 \end{document}
