--- a/assgn-database2/inl-2_6.tex
+++ b/assgn-database2/inl-2_6.tex
@@ -96,6 +96,6 @@ escapeinside={\%*}{*)},          % if you want to add a comment within your code
 \include*{exercises}
 \include*{handin}
 
-%\bibliography{../itgru}
+%\bibliography{../itgrund}
 
 \end{document}
