typo for Brookshear, added Ubuntu docs and latex install instructions.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@153 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/itgrund.bib
+++ b/itgrund.bib
@@ -29,7 +29,7 @@
 }
 @book{
 	Brookshear2012csa,
-	author={Brookshear, J. Glenn. and Smith, David T. and Brylow, Dennis.}, 
+	author={Brookshear, J. Glenn and Smith, David T. and Brylow, Dennis}, 
 	title={Computer science : an overview}, 
 	publisher={Pearson Addison-Wesley}, 
 	address={Boston}, 
@@ -126,4 +126,25 @@
 	month={October},
 	year={2011},
 	URL={http://convergence.io},
+}
+@misc{
+	UbuntuInstall,
+	author={Ubuntu Community},
+	title={{GraphicalInstall}},
+	year={2012},
+	URL={https://help.ubuntu.com/community/GraphicalInstall},
+}
+@misc{
+	UbuntuDesktop,
+	author={Ubuntu Documentation Team},
+	title={Ubuntu Desktop Guide},
+	year={2012},
+	URL={https://help.ubuntu.com/12.04/ubuntu-help/index.html},
+}
+@misc{
+	Bosk2012lui,
+	author={Bosk, Daniel and Franked, Lennart},
+	title={{\LaTeX} Usage Instructions},
+	year={2012},
+	URL={http://ver.miun.se/dokument/instruktioner/latex/windows.pdf},
 }
