added instructions for 7-zip
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@154 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/assgn-install/assgn-install.tex
+++ b/assignments/assgn-install/assgn-install.tex
@@ -34,8 +34,9 @@ under kursens gång.
 
 De programvaror du kommer att installera är följande:
 \begin{itemize}
-	\item TeX Live för Ubuntu och eventuellt MikTeX för Windows, och
-	\item eventuellt LibreOffice för Windows (redan installerat för Ubuntu),
+	\item TeX Live för Ubuntu och eventuellt MikTeX för Windows,
+	\item eventuellt LibreOffice för Windows (redan installerat för Ubuntu), och
+	\item 7-zip för Windows.
 \end{itemize}
 
 
@@ -138,6 +139,11 @@ Om du vill ha tillgång till dessa program i Windows kan du installera MikTeX
 }.
 För MikTeX kan du hoppa över steget att installera universitetets 
 dokumentklasser, detta tas upp i en senare laboration.
+Du behöver också programmet 7-zip för Windows, detta finns tillgängligt från 
+URL
+\begin{center}
+	\url{http://www.7-zip.org/}.
+\end{center}
 
 
 \section{Examination}
