no printanswers.  adapted handin instruction to what is set in the course in moodle.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@157 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/assgn-install/assgn-install.tex
+++ b/assignments/assgn-install/assgn-install.tex
@@ -7,7 +7,7 @@
 \usepackage{listings}
 \usepackage[natbib,varioref,prettyref,listings]{miunmisc}
 
-\printanswers
+%\printanswers
 
 \courseid{DT001G}
 \course{Informationsteknologi grundkurs}
@@ -149,9 +149,10 @@ URL
 \section{Examination}
 \label{sec:Examination}
 \noindent
-Skriv ett enkelt textdokument med hjälp av GEdit i Ubuntu där du sammanfattar 
-dina erfarenheter av denna laboration och ger en kort jämförelse mellan Ubuntu 
-och Windows, eller MacOS om du har mer erfarenhet av det.
+Skriv en sammanfattande text med dina erfarenheter av denna laboration och ger 
+en kort jämförelse mellan Ubuntu och Windows, eller MacOS om du har mer 
+erfarenhet av det än av Windows.
+Du kan skriva texten direkt i inlämningslådan i lärplattformen.
 
 
 \bibliography{../../itgrund}
