work in progress.  added svn keyword Id.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@163 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/assgn-install/assgn-install.tex
+++ b/assignments/assgn-install/assgn-install.tex
@@ -5,8 +5,10 @@
 \usepackage{prettyref,varioref}
 \usepackage{natbib}
 \usepackage{listings}
+\usepackage[today,nofancy]{svninfo}
 \usepackage[natbib,varioref,prettyref,listings]{miunmisc}
 
+\svnInfo $Id$
 %\printanswers
 
 \courseid{DT001G}
@@ -16,7 +18,7 @@
 \author{Daniel Bosk\footnote{%
 	E-post: \href{mailto:daniel.bosk@miun.se}{daniel.bosk@miun.se}.
 }}
-\date{\today}
+\date{\svnId}
 
 \begin{document}
 \maketitle
