--- a/assignments/assgn-terminal/assgn-terminal.tex
+++ b/assignments/assgn-terminal/assgn-terminal.tex
@@ -7,8 +7,10 @@
 \usepackage{verbatim}
 \usepackage{listings}
 \usepackage{color}
+\usepackage[today,nofancy]{svninfo}
 \usepackage[natbib,varioref,prettyref,listings]{miunmisc}
 
+\svnInfo $Id$
 %\printanswers
 
 \courseid{DT001G}
@@ -18,7 +20,7 @@
 \author{Daniel Bosk\footnote{%
 	E-post: \href{mailto:daniel.bosk@miun.se}{daniel.bosk@miun.se}.
 }}
-\date{\today}
+\date{\svnId}
 
 \lstset{basicstyle=\footnotesize}
 
