exported reading instructions to literature.tex
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@165 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/assgn-install/assgn-install.tex
+++ b/assignments/assgn-install/assgn-install.tex
@@ -53,26 +53,7 @@ i din dator.
 \section{Läsanvisningar}
 \label{sec:Lasanvisningar}
 \noindent
-För att genomföra denna laboration bör du ha läst kapitlet om operativsystem 
-och bootprocessen \citep[kapitel 3]{Brookshear2012csa}.
-
-Innan du genomför laborationen bör du också läsa igenom dokumentationen för 
-installationen av Ubuntu \citep{UbuntuInstall}, detta är inte för att 
-installationen är svår att genomföra utan för att du ska kunna fundera igenom 
-dina beslut på förhand.
-
-När Ubuntu väl är installerat finns dokumentationen \citep{UbuntuDesktop} som 
-stöd för att börja använda systemet.
-Det kan vara bra att orientera sig i denna för senare enkelt hitta vid behov.
-Det rekommenderas att läsa igenom de första fem avsnitten -- \emph{Welcome to 
-Ubuntu 12.04} till och med \emph{Log out, power off, switch users} -- innan 
-installationen.
-Du ska även läsa om hur program installeras \citep[se Install additional 
-software]{UbuntuDesktop}.
-
-Om du använder Windows och vill testa att installera programmen även där finns 
-en instruktion för att installera \LaTeX\ för Windows \citep{Bosk2012lui}.
-Hur \LaTeX\ installeras under Ubuntu täcks senare i denna lydelse.
+\input{literature.tex}
 
 
 \section{Genomförande}
