--- a/assignments/assgn-security/assgn-security.tex
+++ b/assignments/assgn-security/assgn-security.tex
@@ -34,7 +34,7 @@ Detta ses tydligt på året 2011.
 Många stora företag hackades och alltifrån deras e-post till deras 
 lösenordsdatabaser publicerades öppet på internet.
 Ett tydligt exempel är DigiNotar, en av Nederländernas största certificate 
-authorities (CA) då som gick i konkurs efter en av de största skandalerna 
+authorities (CA) som gick i konkurs efter en av de största skandalerna 
 i historien av säkerhet på internet.
 Ett annat exempel från 2012 är Mat Honan, journalist på techtidningen Wired, 
 vars digitala liv helt försvann i en attack.
@@ -121,7 +121,7 @@ Genomför uppgifterna i den ordning de ges.
 	\question\label{q:Kamkar}
 	Sammanfatta dina tankar om föreläsningen \emph{How I met your girlfriend} 
 	\citep{Kamkar2010him} och intervjun om hur Facebook har information om 
-	icke-medlemmar \citep{Cherry2012fny} i en kort text.
+	icke-medlemmar \citep{Cherry2012fky} i en kort text.
 	\begin{solution}
 		Det finns väldigt många olika sätt att attackera dagens
 		informationssystem.
